# anim-viewer-gl

./: .gitignore  .gitmodules  CMakeLists.txt
Glitter/Headers/: AnimViewerGUI.hpp  AnimatedModel.hpp  Camera.hpp  FbxLoader.hpp  Program.hpp  Renderer.hpp  SimpleMesh.hpp  ThreadSafeQueue.hpp  Window.hpp  glitter.hpp
Glitter/Shaders/: simple_frag.glsl  simple_vert.glsl
Glitter/Sources/: AnimViewerGUI.cpp  AnimatedModel.cpp  Camera.cpp  FbxLoader.cpp  Program.cpp  SimpleMesh.cpp  Window.cpp  main.cpp
